syntax = "proto3";
package dydxprotocol.lendingpool;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/StreamFinance-Protocol/stream-chain/protocol/x/lendingpool/types";

// PoolParams defines the parameters for a given pool.
message PoolParams {

  // token_denom is the denomination of the token in the pool.
  string token_denom = 1;

  // max_pool_liquidity is the maximum liquidity allowed in the pool.
  string max_pool_liquidity = 2;

  // optimal_utilization_ratio is the optimal ratio of utilization for the pool.
  string optimal_utilization_ratio = 3;

  // base_rate is the base interest rate for the pool.
  string base_rate = 4;

  // slope_one_rate is the interest rate slope for the first segment.
  string slope_one_rate = 5;

  // slope_two_rate is the interest rate slope for the second segment.
  string slope_two_rate = 6;

  repeated string permissioned_credit_accounts = 7;
}


